...

<!--    <string name=""></string>-->

    <string name="mapbox_access_token">pk.eyJ1IjoianVsaXVzZGlreSIsImEiOiJja2ZtMWNqeGsxYmVpMnFtajhtNWRpYXY4In0.pBDQ0v0jDvIgdvUbUwOrrA</string>

    <string name="app_name">SewaIn</string>
    <string name="btnSignIn">Sign In</string>
    <string name="btnSignUp">Sign Up</string>
    <string name="btnSignOut">Sign Out</string>

    <string name="nama">Nama</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
...
    <string name="listMotor">List Motor</string>
    <string name="profile">Profil</string>

    <string name="motor">Kode Motor</string>
    <string name="hari">Durasi Sewa (Hari)</string>

    <string name="btnKembali">Kembali</string>
    <string name="btnSimpan">Simpan</string>
    <string name="btnProses">Proses</string>

    <string name="nama_penyewa">Nama Penyewa <font color='red'>(*)</font></string>
    <string name="noid">No.Identitas <font color='red'>(*)</font></string>
    <string name="no_telp">No. Telp <font color='red'>(*)</font></string>
    <string name="nama_motor">Nama Motor <font color='red'>(*)</font></string>
    <string name="lama_sewa">Lama Sewa <font color='red'>(*)</font></string>
...
