...
        android:textColor="@color/tombol"
        android:layout_gravity="center"
        />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_first_layout"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputEmail"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:autofillHints=""
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:layout_gravity="center"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_last_layout"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputPassword"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:autofillHints=""
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_gravity="center"/>
...
