...
            android:layout_gravity="center"
            android:layout_weight="0.8"
            android:backgroundTint="@color/tombol"
            android:text="@string/btnKembali" />

        <Button
            android:id="@+id/btnSewaUTS"
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:layout_marginStart="50px"
            android:layout_gravity="center"
            android:layout_weight="0.8"
            android:backgroundTint="@color/tombol"
            android:text="Sewa Motor" />

    </LinearLayout>

</LinearLayout>
</ScrollView>
